# sms_ex

./: .gitignore  .replit  README.md  pyproject.toml
repl/: epid.py  main.py
w_00/: ex_00.ipynb
w_01/: EmanueleBallarin_SMS_hw_01.ipynb  ex_01.ipynb  ex_01.md
w_02/: epid.py
