[tool.poetry]
name = "sms_ex"
version = "0.1.0"
description = "Stochastic Modelling and Simulation: exercises (UniTS, spring 2021)"
authors = ["Emanuele Ballarin <emanuele@ballarin.cc>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scipy = "*"
pandas = "*"
matplotlib = "*"
sklearn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
